- Client and server connector under development.

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -6,37 +6,44 @@ EXEC = i3d-engine
 LIB_PATH = .
 LIB_PATH_UI = ./i3d-gui
 LIB_PATH_UTIL = ./i3d-utility
+LIB_PATH_CLIENT = ./i3d-client
 DEMO_PATH = ./i3d-demo
 
 
 LIB_SRC = $(wildcard *.cpp)
 LIB_SRC_UI = $(wildcard $(LIB_PATH_UI)/*.cpp)
 LIB_SRC_UTIL = $(wildcard $(LIB_PATH_UTIL)/*.cpp)
+LIB_SRC_CLIENT = $(wildcard $(LIB_PATH_CLIENT)/*.cpp)
 DEMO_SRC = $(wildcard $(DEMO_PATH)/*.cxx)
 
 
 LIB_OBJS = $(notdir $(patsubst %.cpp, %.o, $(LIB_SRC)))
 LIB_OBJS_UI = $(notdir $(patsubst %.cpp, %.o, $(LIB_SRC_UI)))
 LIB_OBJS_UTIL = $(notdir $(patsubst %.cpp, %.o, $(LIB_SRC_UTIL)))
+LIB_OBJS_CLIENT = $(notdir $(patsubst %.cpp, %.o, $(LIB_SRC_CLIENT)))
 DEMO_OBJS = $(notdir $(patsubst %.cxx, %.o, $(DEMO_SRC)))
 
 
 OBJS := $(addprefix $(BIN), $(LIB_OBJS)) \
 		$(addprefix $(BIN), $(LIB_OBJS_UI)) \
 		$(addprefix $(BIN), $(LIB_OBJS_UTIL)) \
+		$(addprefix $(BIN), $(LIB_OBJS_CLIENT)) \
 		$(addprefix $(BIN), $(DEMO_OBJS))
 
 
 CFLAGS = -W -Wall -ansi -pedantic -O0 -g2 -std=gnu++0x -m32 \
 		-DGLEW_STATIC -DGLEW_NO_GLU -DGLEW_BUILD -DFREEGLUT_STATIC \
 		-I/usr/include/freetype2 \
+		-I/usr/include/mysql/ \
 		-I$(LIB_PATH)/headers \
 		-I$(LIB_PATH_UI)/headers \
 		-I$(LIB_PATH_UTIL)/headers \
+		-I$(LIB_PATH_CLIENT)/headers \
 		-I$(DEMO_PATH)/headers \
 		-L/usr/lib/i386-linux-gnu
 
-LDFLAGS = -lftgl -lfreetype -lglut -lGL -lGLEW -lpng -lz
+LDFLAGS = -lmysqlclient -lmysqlcppconn-static \
+	-lftgl -lfreetype -lglut -lGL -lGLEW -lpng -lz
 
 
 all: $(BIN)$(EXEC)
@@ -51,6 +58,9 @@ $(BIN)%.o: $(LIB_PATH_UI)/%.cpp
 	$(CC) -o $@ -c $< $(CFLAGS)
 
 $(BIN)%.o: $(LIB_PATH_UTIL)/%.cpp
+	$(CC) -o $@ -c $< $(CFLAGS)
+
+$(BIN)%.o: $(LIB_PATH_CLIENT)/%.cpp
 	$(CC) -o $@ -c $< $(CFLAGS)
 
 $(BIN)%.o: $(DEMO_PATH)/%.cxx
